# algorithm_templates

./: .gitignore  CMakeLists.txt  README.md
interview/: CMakeLists.txt  Readme.txt  ali_1.txt  ali_2.txt  ali_20200302  byte_dance  cf1213d2.cpp  douyin_0.txt  douyin_1.txt  hanoi.cpp  huawei_p2.cpp  huawei_p3.cpp  kuaishou.cpp  pony_0.txt  print_in_seq.cpp  yunjing_interview
leetcode/: CMakeLists.txt  Readme.txt  common.h  lc1005.cpp  lc1014.cpp  lc1024.cpp  lc1027.cpp  lc1029.cpp  lc1035.cpp  lc1036.cpp  lc1038.cpp  lc1052.cpp  lc1054.cpp  lc1056.cpp  lc1057.cpp  lc1060.cpp  lc1063.cpp  lc1071.cpp  lc1074.cpp  lc1086.cpp  lc1092.cpp  lc1094.cpp  lc1099.cpp  lc1100.cpp  lc1102.cpp  lc1130.cpp  lc1136.cpp  lc1140.cpp  lc1153.cpp  lc1156.cpp  lc1167.cpp  lc1168.cpp  lc1171.cpp  lc1186.cpp  lc1187.cpp  lc1191.cpp  lc1192.cpp  lc1199.cpp  lc1202.cpp  lc1203.cpp  (+70 more)
poj/: README.md  p1127.cc  p1258.cc  p2135.cc  p2139.cc  p2187.cc  p2377.cc  p2395.cc  p2686.cc  p2932.cc  p3041.cc  p3169.cc  p3255.cc  p3259.cc  p3259_1.cc  p3268.cc  p3281.cc  p3723.cc  p3723_1.cc  p3723_te.cc
utils/: commands
uva/: CMakeLists.txt  README.md  p10003.cc  p10048.cpp  p10129.cc  p1025.cc  p10256.cc  p10305.cc  p10603.cc  p10603_1.cc  p10652.cc  p10817.cc  p10817_1.cc  p1100.cc  p11059.cc  p11107.cc  p11168.cc  p11178.cc  p11212.cc  p11212_1.cc  p11212_2.cc  p11212_3.cc  p11235.cc  p11275.cc  p1146.cc  p116.cc  p11694.cc  p11796.cc  p11882.cc  p11922.cc  p11988.cc  p11992.cc  p12099.cc  p12171.cc  p12171_1.cc  p1218.cc  p12186.cc  p122.cc  p1220.cc  p12296.cc  (+64 more)
working/: commands  notes  todo
(+23 files in other folders)
